examples/single-cluster-dual-mesh/config/apps/echo-mesh-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-api-2
  labels:
    app: echo-api-2
    mesh: mesh-2
spec:
  selector:
    matchLabels:
      app: echo-api-2
  template:
    metadata:
      labels:
        app: echo-api-2
        mesh: mesh-2
    spec:
      containers:
        - name: echo-api
          image: quay.io/3scale/authorino:echo-api
          ports:
            - containerPort: 3000
              name: http
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: echo-api-2
  labels:
    mesh: mesh-2
spec:
  selector:
    app: echo-api-2
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
