examples/single-cluster-dual-mesh/config/apps/echo-route-2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-route-2
  namespace: mesh-demo-apps-2
spec:
  parentRefs:
    - name: kuadrant-ingressgateway
      namespace: ingress-gateways
  hostnames:
    - "demo.10.89.0.0.nip.io"
  rules:
    - matches:
        - path:
            type: Exact
            value: /echo2
      backendRefs:
        - name: echo-api-2
          port: 3000
